<resources>
    <string name="app_name">My Habit</string>

    <!--activity_main: Main screen-->
    <string name="greeting_text">Welcome to your habit tracking app!</string>
    <string name="view_habit">View my current habits</string>

    <!--activity_time: log time-->
    <string name="instruction_act2">Create a new entry by typing an activity category and duration:</string>

    <!--activity_3: View current habits-->
    <string name="instruction_act3">This is the list of your current habits you are tracking.</string>
    <!--static texts-->
    <string name="demo_habitA">Habit A</string>
    <string name="demo_habitB">Habit B</string>
    <string name="demo_habitC">Habit C</string>

    <!--dummy texts-->
    <string name="insert">INSERT TITLE</string>


    <!--June 4, 2020-->
    <!--Activity_Time - Time tracking page-->
    <string name="instruction1">See all of your time tracked here </string>
    <string name="log_time">Log Time</string>
    <string name="category">Category</string>
    <string name="edit_time">Edit Time</string>
    <string name="edit_your_information_below">Edit your information below</string>
    <string name="duration_min">Duration (min)</string>
    <string name="confirm">Confirm</string>
    <string name="my_habit">My Habit</string>
    <string name="how_s_your_day_going">How\'s your day going?</string>
    <string name="see_today_s_tracked_time_here">See today\'s tracked time here:</string>
    <string name="log">Log</string>
    <string name="time_detail">Time Detail</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="insert_up_to_25_words">insert up to 25 words</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="example_160">example: 160</string>
    <string name="example_work">example: work</string>


</resources>